--- a/assur-rh-angular/src/app/components/mylearning/mylearning.component.html
+++ b/assur-rh-angular/src/app/components/mylearning/mylearning.component.html
@@ -1,1 +1,78 @@
-<p>mylearning works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UAssur-RH</title>
+</head>
+<body>
+    <header>
+        <div class="logo"><a href="index.html" style="text-decoration: none;color: black;">Assur-RH</a></div>
+        
+        <nav>
+            <div class="dropdown">
+                <a href="" class="mainmenubtn">Demandes</a>
+                <div class="dropdown-child">
+                    <a href="simulator.html" class="mainmenubtn1">Congé</a>
+                    <a href="#" class="mainmenubtn2">Permission</a>
+                </div>
+            </div>
+            <a href="calendrier.html">Calendrier</a>
+            <a href="news.html">News</a>
+
+            <a href="mylearning.html">My learning</a>
+            <a href="faq.html">FAQ</a>
+        </nav>
+        <div class="auth">
+            
+            <a href="#" class="signup">Déconexion</a>
+        </div>
+    </header>
+    <!-- Search Bar -->
+    <div class="search-bar">
+        <input type="text" placeholder="Search...">
+    </div>
+    <div class="container">
+        
+
+        <!-- Course Content -->
+        <div class="course-content">
+            <h1>Tutoriel de prise en main de la plateforme</h1>
+            
+            <!-- Video Section -->
+            <div class="video-section">
+                <img src="assets/img/capturetuto.jpg" alt="Laptop Image">
+                <div class="video-controls">
+                    <span class="progress-bar"></span>
+                    <span class="time">00:32 / 09:52</span>
+                </div>
+            </div>
+
+            <!-- Lesson Information -->
+            <div class="tuto-info">
+                <h2>Comment faire une demande de congé et une demande de permission</h2>
+                <p>EllaN'DRI</p>
+                <div class="description">
+                    <p>Ce cours vous aidera comprendre le fonctionement de la plateforme...</p>
+                </div>
+                <div class="social-interactions">
+                    <span>👍 145</span>
+                    <span>👎 6</span>
+                    <span>🔗</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- Sidebar with Lessons -->
+        <div class="sidebar">
+            <h3>Lessons</h3>
+            <ul>
+                <li>Tutoriel 1 – Présentation (11 min)</li>
+                <li>Tutoriel 2 – Prise de congé (12 min)</li>
+                <li>Tutoriel 2 – Demande de permission (16 min)</li>
+                
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
