--- a/assur-rh-angular/src/app/components/simulator/simulator.component.html
+++ b/assur-rh-angular/src/app/components/simulator/simulator.component.html
@@ -1,1 +1,72 @@
-<p>simulator works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assur-RH</title>
+</head>
+<body>
+    <header>
+        <div class="logo"><a href="index.html" style="text-decoration: none;color: black;">Assur-RH</a></div>
+        
+        <nav>
+            <div class="dropdown">
+                <a href="" class="mainmenubtn">Demandes</a>
+                <div class="dropdown-child">
+                    <a href="simulator.html" class="mainmenubtn1">Congé</a>
+                    <a href="#" class="mainmenubtn2">Permission</a>
+                </div>
+            </div>
+            <a href="#">Calendrier</a>
+            <a href="news.html">News</a>
+
+            <a href="mylearning.html">My learning</a>
+            <a href="faq.html">FAQ</a>
+        </nav>
+        <div class="auth">
+            
+            <a href="#" class="signup">Déconexion</a>
+        </div>
+    </header>
+    <main>
+        <section class="survey">
+            <h1>Faites votre choix</h1>
+            <p class="subheading">Select up to 3 options</p>
+            <form>
+                <div class="options-grid">
+                    <label class="option">
+                        <input type="checkbox" name="movies" value="A New Hope">
+                        A New Hope
+                    </label>
+                    
+                    <label class="option selected">
+                        <input type="checkbox" name="movies" value="The Empire Strikes Back" checked>
+                        The Empire Strikes Back
+                    </label>
+                    <label class="option">
+                        <input type="checkbox" name="movies" value="The Force Awakens">
+                        The Force Awakens
+                    </label>
+                    
+                    <label class="option selected">
+                        <input type="checkbox" name="movies" value="Rogue One: A Star Wars Story" checked>
+                        Rogue One: A Star Wars Story
+                    </label>
+                    
+                    <label class="option">
+                        <input type="checkbox" name="movies" value="The Third Gathers: Backstroke of the West">
+                        The Third Gathers: Backstroke of the West
+                    </label>
+                </div>
+                <div class="progress-bar-container">
+                    <span>24% complete. Keep it up!</span>
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <button class="next-button">Next Question</button>
+            </form>
+        </section>
+    </main>
+</body>
+</html>
